@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Better encapsulation of API::Instance
+    - API methods to get lists of hooks
+
 0.000015  2016-01-07 19:26:58-08:00 America/Los_Angeles
 
     - Make it possible to use a custom new() with HashBase
